--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -10,6 +10,7 @@
 }
 
 .navbar {
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -39,6 +40,7 @@
     font-weight: 700;
     text-transform: uppercase;
     text-wrap: wrap;
+    text-align: center;
     margin: 5px 0 10px 0;
 }
 
