--- a/frontend/src/css/DeleteCharacter.css
+++ b/frontend/src/css/DeleteCharacter.css
@@ -12,14 +12,15 @@ button {
     display: flex;
     justify-content: flex-start;
     align-content: center;
+    width: 90%;
 }
 
 .form-container {
-    margin: 20px;
+    margin: 0 auto;
 }
 
 .content-container {
-    margin-left: 20px;
+    margin: 0 auto;
     flex-direction: column;
 }
 
