--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,3 +1,8 @@
+.title-section {
+    width: 90%;
+    margin: 0 auto;
+}
+
 .main-title {
     font-size: 2.5em;
     text-align: center;
@@ -12,3 +17,7 @@
     margin-top: 1em;
 }
 
+.option-button {
+    background-color: #FD3037;
+    color: white;
+}
