--- a/frontend/src/css/EditCharacter.css
+++ b/frontend/src/css/EditCharacter.css
@@ -10,7 +10,7 @@ button {
 .form-container,
 .content-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center !important;
     align-content: center;
 }
 
@@ -23,7 +23,10 @@ button {
     flex-direction: column;
 }
 
+.card-container {
+    margin-right: 40px;
+}
+
 .form-element {
     margin: 10px 0px;
 }
-
